--- a/src/app/features/products/products.component.html
+++ b/src/app/features/products/products.component.html
@@ -12,7 +12,7 @@
             <mat-form-field appearance="outline">
                 <mat-label for="price">Preço (R$):</mat-label>
                 <span matTextPrefix>R$ &nbsp;</span>
-                <input matInput [(ngModel)]="current.price" name="price" type="number" placeholder="Preço" required />
+                <input matInput [(ngModel)]="current.price" name="price" type="currency" placeholder="Preço" required />
             </mat-form-field>
 
             <mat-form-field appearance="outline">
