feat: Add autocomplete to product form control

--- a/src/app/features/pdv/pdv.component.html
+++ b/src/app/features/pdv/pdv.component.html
@@ -7,11 +7,21 @@
         <form (ngSubmit)="addItem()">
             <mat-form-field appearance="outline">
                 <mat-label for="productId">Produto:</mat-label>
-                <mat-select [(ngModel)]="selectedProductId" name="productId" required>
-                    @for (p of products; track p.id) {
-                        <mat-option [value]="p.id">{{ p.name }} - R$ {{ p.price }}</mat-option>
+                <input type="text"
+                    matInput
+                    placeholder="Buscar produto"
+                    aria-label="Buscar produto"
+                    [formControl]="productControl"
+                    [matAutocomplete]="auto"
+                    >
+
+                <mat-autocomplete #auto="matAutocomplete">
+                    @for (p of filteredProducts | async; track p.id) {
+                        <mat-option [value]="p.name" (onSelectionChange)="selectedProductId = p.id" (click)="selectedProductId = p.id">
+                            {{ p.name }} - {{ p.price | currency:'BRL':'symbol':'1.2-2' }}
+                        </mat-option>
                     }
-                </mat-select>
+                </mat-autocomplete>
             </mat-form-field>
 
             <mat-form-field appearance="outline">
