--- a/src/app/features/stock/stock.component.html
+++ b/src/app/features/stock/stock.component.html
@@ -12,15 +12,7 @@
                 </mat-select>
             </mat-form-field>
 
-            <mat-form-field appearance="outline">
-                <mat-label for="productId">Produto:</mat-label>
-                <mat-select [(ngModel)]="movement.productId" name="productId" required>
-                    @for(p of products; track p.id) {
-                        <mat-option [value]="p.id">{{ p.name }}</mat-option>
-                    }
-                </mat-select>
-
-            </mat-form-field>
+            <app-product-combobox [(selectedProduct)]="selectedProduct" #productCombobox></app-product-combobox>
 
             <mat-form-field appearance="outline">
                 <mat-label for="warehouseId">Estoque:</mat-label>
