--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -41,3 +41,10 @@ nav a.active {
 .content {
     padding: 20px;
 }
+
+.group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
