--- a/src/app/features/products/products.component.html
+++ b/src/app/features/products/products.component.html
@@ -8,6 +8,8 @@
                 <mat-label for="name">Nome:</mat-label>
                 <input matInput [(ngModel)]="current.name" name="name" placeholder="Nome" required />
             </mat-form-field>
+
+            <app-category-combobox [(selectedCategory)]="current.category" #categoryCombobox></app-category-combobox>
         
             <mat-form-field appearance="outline">
                 <mat-label for="price">Preço (R$):</mat-label>
@@ -58,6 +60,11 @@
                         {{ getBalanceTotal(product) }}
                     </td>
                 </ng-container>
+
+                <ng-container matColumnDef="category">
+                    <th mat-header-cell *matHeaderCellDef> Categoria </th>
+                    <td mat-cell *matCellDef="let product"> {{product.category?.name || withoutCategory}} </td>
+                </ng-container> 
 
                 <ng-container matColumnDef="actions">
                     <th mat-header-cell *matHeaderCellDef> Ações </th>
